[package]
name = "macroquad_p5"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2021"
description = "A macroquad template for creative coding, inspired by p5 / Processing."
repository = "https://github.com/kirinokirino/macroquad_p5"
documentation = ""
homepage = ""
readme = "README.md"
license = "gpl"
keywords = ["game"]
categories = ["games"]

[dependencies]
macroquad = { version = "0.3.13", default-features = false } #, features = ["audio", "log-rs"] }
simple-simplex = "1.0"
once_cell = "1.9"

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
[profile.dev]
#debug = 1

[profile.dev.package."*"]
opt-level=3
